--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/coolaj86/unibabel-js.git"
+    "url": "git+https://git.coolaj86.com/coolaj86/unibabel.js.git"
   },
   "keywords": [
     "ascii",
@@ -28,10 +28,10 @@
     "Base32",
     "b32"
   ],
-  "author": "AJ ONeal <coolaj86@gmail.com> (http://coolaj86.com/)",
-  "license": "Apache-2.0",
+  "author": "AJ ONeal <coolaj86@gmail.com> (https://coolaj86.com/)",
+  "license": "(MIT OR Apache-2.0)",
   "bugs": {
-    "url": "https://github.com/coolaj86/unibabel-js/issues"
+    "url": "https://git.coolaj86.com/coolaj86/unibabel.js/issues"
   },
-  "homepage": "https://github.com/coolaj86/unibabel-js#readme"
+  "homepage": "https://git.coolaj86.com/coolaj86/unibabel.js#readme"
 }
