--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,7 @@
 {
   "name": "unibabel",
   "main": "index.js",
-  "version": "2.1.7",
-  "homepage": "https://github.com/coolaj86/unibabel-js",
+  "homepage": "https://git.coolaj86.com/coolaj86/unibabel.js",
   "authors": [
     "AJ ONeal <coolaj86@gmail.com>"
   ],
