--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unibabel",
-  "version": "2.1.7",
+  "version": "2.1.8",
   "description": "Base64, TypedArrays, and UTF-8 / Unicode conversions in Browser (and Node) JavaScript",
   "main": "node.js",
   "browser": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://git.coolaj86.com/coolaj86/unibabel.js.git"
+    "url": "https://git.coolaj86.com/coolaj86/unibabel.js.git"
   },
   "keywords": [
     "ascii",
